# bayleaf-agents

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0bf7c2b9a749_add_phi_filter_tables.py  1a2b3c4d5e6f_add_conversation_groups.py  2c14325cf5e4_init.py  3f5e7a9c1d2b_add_user_metadata_table.py  6f1c9d2e8aab_add_message_retrieval_trace.py  7c4a2d9e1b6f_drop_user_metadata_client_id.py  9d2f1b3c4e5f_add_conversation_agent_slug.py  b7c4d1e9f2aa_add_conversation_name.py  c9e4a7b1d3f2_add_message_citations_fields.py
docker/: entrypoint.sh
sample/: book.html  chat.html
src/bayleaf_agents/: app.py  config.py  db.py  logging.py  models.py
src/bayleaf_agents/agents/: appointment_agent.py  base_agent.py  labcopilot_agent.py  treatment_agent.py
src/bayleaf_agents/auth/: deps.py
src/bayleaf_agents/llm/: base.py  mock.py  openai_provider.py
src/bayleaf_agents/routers/: agents.py  chat.py  documents.py  health.py
src/bayleaf_agents/schemas/: chat.py  common.py
src/bayleaf_agents/services/: agent.py  agent_registry.py  factories.py  phi_filter.py  qdrant_documents.py
tests/: test_bayleaf_documents_auth.py  test_chat_research_documents.py  test_chat_smoke.py  test_conversation_identity.py  test_conversation_messages_citations.py  test_document_index_integration.py  test_documents_query_scope.py  test_health.py  test_reasoning_retrieval_policy.py  test_trailing_slash_redirects.py  test_user_metadata.py
(+10 files in other folders)
